 - Leviathan SPARQL engine now operates over an ISparqlDataset which is an abstraction between the data and the
   SPARQL engine which allows for out of memory datasets to be queried and updated with Leviathan
 - Reverse Translation from ISparqlAlgebra to SparqlQuery
 - Optimisation for queries using ORDER BY under some circumstances
 - Various fixes to SPARQL Join Semantics
 - Improved SparqlParameterizedString
  - Can now set values for Variables which are substituted into the query when you call ToString()
  - Has own Namespace Map allowing prefixes to be registered programatically and have the code take care of generating the PREFIX declarations
 - Improved ISparqlExpression interface to allow for traversing of expression trees and custom formatting
 - Changes to support latest 1.1 Draft Specifications
  - IN and NOT IN for SPARQL now support any expressions evaluate properly using SPARQL value equality
  - COALESCE now errors if none of the arguments evaluate to a non-null value
- Update Improvements
 - WHERE clauses in Update Commands are now optimised
 - Added support for revised syntax of existing commands based on latest drafts of the SPARQL 1.1 Update specification
- Writing Improvements
 - Writers all try to ensure correct encoding where possible (most already did this)
- ASP.Net Improvements
 - All HTTP Handlers output CORS headers so RDF/SPARQL content is accessible to JS client (may be disabled 
   using dnr:enableCors if desired on a per HTTP Handler basis)
 - SparqlServer now supports omitting any of the processors (provided at least one is specified) so you can create
   endpoints with some features explicitly disabled
- Obsoleted Features
 - All ISqlIOManager features marked as obsolete (but still allowed until 0.5.x most likely at which point they will be removed/replaced)
 - RdfXmlTreeWriter and FastRdfXmlWriter marked as obsolete