@@ -72,8 +72,6 @@ Query and Update
   but we fail 20 and ignore a further 11 of 308 tests due to the following issues:
   - Property Path semantics have changed since the previous drafts but our implementation has not so we particularly
     fail tests involving variable and zero length paths
-  - MINUS and NOT EXISTS negation work for basic constructs but we fail tests where there are complex
-    interactions between them
   - Blank Nodes used as wildcards in INSERT/DELETE commands is not supported as it is unclear whether the WG
     will endorse this usage or not.  If they do the feature presents a significant implementation hurdle which
     is why it is not currently implemented
